HelpMePlay | 1.1.1
	New Features:
		- Added auto sharing to Party Play.